--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
     {% if progress %}<div class="progress"><div></div></div>{% endif %}
     <script src="shower/shower.min.js"></script>
 
-    <script src="/highlight/highlight.pack.js"></script>
+    <script src="highlight/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 
     <!-- Copyright © {{ site.time | date: "%Y" }} {{ author_name }}{% if author_url != '' %} — {{ author_url }}{% endif %}{% if company_name != '' %}, {{ company_name }}{% if company_url != '' %} — {{ company_url }}{% endif %}{% endif %} -->
