--- a/app/src/main/res/layout/list.xml
+++ b/app/src/main/res/layout/list.xml
@@ -4,6 +4,7 @@
 
     <ListView
         android:id="@+id/list"
+        android:visibility="invisible"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
@@ -15,6 +16,7 @@
 
     <LinearLayout
         android:id="@+id/error_layout"
+        android:visibility="invisible"
         android:layout_gravity="center"
         android:gravity="center"
         android:orientation="vertical"
@@ -26,11 +28,5 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/error_loading"/>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/reload"/>
     </LinearLayout>
 </FrameLayout>
