--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,10 @@
     {{ showerify_output }}
 
     {% if fork_url != '' %}<p class="badge"><a href="{{ fork_url }}">Fork me on Github</a></p>{% endif %}
+    <div class="footer">
+        <span>@fabioCollini cosenonjaviste.it</span>
+        <img style="width: 32px;margin-left: 8px;vertical-align:middle;" src="pictures/cosenonjaviste.png">
+    </div>
     {% if progress %}<div class="progress"><div></div></div>{% endif %}
     <script src="shower/shower.min.js"></script>
 
