--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,10 @@
 
     {% if fork_url != '' %}<p class="badge"><a href="{{ fork_url }}">Fork me on Github</a></p>{% endif %}
     <div class="footer">
-        <span>@fabioCollini cosenonjaviste.it</span>
+        <span>
+            <a href="https://twitter.com/fabioCollini">@fabioCollini</a>
+            <a href="http://www.cosenonjaviste.it">cosenonjaviste.it</a>
+        </span>
         <img style="width: 32px;margin-left: 8px;vertical-align:middle;" src="pictures/cosenonjaviste.png">
     </div>
     {% if progress %}<div class="progress"><div></div></div>{% endif %}
